package com.lft.decorator.coffee;

import com.lft.decorator.Coffee;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020-09-11 8:29
 * <p>
 * Class Name:      Espresso
 * Package Name:    com.lft.decorator
 * @author Laifengting / E-mail:laifengting@foxmail.com
 * @version 1.0.0
 * @since JDK 8
 */
public class LongBlack extends Coffee {
	public LongBlack() {
		setDes("~~意式蒸馏热咖啡~~");
		setPrice(5.0F);
	}
}
