package com.lft.decorator.coffee;

import com.lft.decorator.Coffee;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020-09-11 8:29
 * <p>
 * Class Name:      Espresso
 * Package Name:    com.lft.decorator
 * @author Laifengting / E-mail:laifengting@foxmail.com
 * @version 1.0.0
 * @since JDK 8
 */
public class ShortBlack extends Coffee {
	public ShortBlack() {
		setDes("~~意式蒸馏咖啡~~");
		setPrice(4.0F);
	}
}
