@startuml
!define DARK
!include G:\WorkSpace\Java\IJCode\Design-Pattern\lib\LFT-UML.puml
' 允许各种图混合使用
allowmixing

' 说明文字
'caption 装饰者/装饰器模式

' UML图标题
title 装饰者/装饰器模式

'抽象类 饮料
abstract class Drink{
	- description
	..
	+ getDescription()
	+ cost()
}

'咖啡 继承 饮料
class Coffee{
	+ cost(): float
}
Coffee -up-|> Drink

'具体各种咖啡 继承 咖啡
class Espresso
class ShortBlack
class LongBlack

Espresso -up-|> Coffee
ShortBlack -up-|> Coffee
LongBlack -up-|> Coffee

'装饰者 继承+组合 饮料
class Decorator{
	- obj: Drink
	..
	+ getDes(): String
	+ cost(): float
}

Drink <|-left-* Decorator

'各种调料类
class Chocolate
class Milk
class Soy

Decorator <|-- Chocolate
Decorator <|-- Milk
Decorator <|-- Soy

@enduml
